# Project_lifegame

./: CMakeLists.txt  Grass.cpp  Grass.h  Obj.cpp  Obj.h  Project_lifegame.sln  Project_lifegame.vcxproj  Project_lifegame.vcxproj.filters  README.md  Sheep.cpp  Sheep.h  Wolfs.cpp  Wolfs.h  main.cpp  out.txt
